--- a/.gitignore
+++ b/.gitignore
@@ -1,102 +1,165 @@
 import { FeeGroup } from './entities/FeeGroups.js';
 import numberToCurrency from '../core/helpers/currency.js';
 
-export default class CustomerFees {
-  #feeName = 'Customer Fees';
-  #customer = {};
+export default class InvestmentAccountFee {
+  #feeName = 'Investment Account Fees';
+  #investiment = {};
   #accounts = [];
+  #accountsDDA = [];
+  #allExceptions = new Set();
 
-  constructor(fees, accounts) {
-    if (!fees || !Array.isArray(fees) || fees.length === 0) {
-      throw new Error('Fees is empty or undefined');
+  constructor(fees, accounts, equityField) {
+    this.#investiment = fees.filter((x) => x.feeType === this.#feeName)[0];
+    if (!this.#investiment || !Array.isArray(this.#investiment.feeGroups) || !this.#investiment.feeGroups.length) {
+      this.#investiment = {};
+      return;
     }
-    // Seleciona os dados do fee do tipo Customer Fees
-    this.#customer = fees.filter((x) => x.feeType === this.#feeName)[0];
-    if (!this.#customer || !Array.isArray(this.#customer.feeGroups)) {
-      throw new Error('Customer Fees or feeGroups are undefined');
+    const feeGroupCode = this.#investiment.feeGroups[0].code;
+
+    this.#accounts = accounts.filter((x) => x.feeType === 3);
+
+    if (this.#accounts.length < 1) {
+      this.#investiment = {};
+      return;
     }
-    if (!accounts || !Array.isArray(accounts) || accounts.length === 0) {
-      throw new Error('Accounts is empty or undefined');
-    }
-    // Para Customer Fees, geralmente há apenas uma conta
-    this.#accounts = [accounts[0]];
+
+    this.#accounts.forEach((acc) => {
+      if (acc.ddaNumber) {
+        this.#accountsDDA.push({
+          number: acc.ddaNumber,
+          code: 5,
+          entity: acc.entity || null,
+        });
+        this.#accountsDDA.push({
+          number: acc.ddaNumber,
+          code: 7,
+          entity: acc.entity || null,
+        });
+      }
+    });
+    
+    this.#accountsDDA = Array.from(
+      new Map(this.#accountsDDA.map(item => [`${item.number}-${item.code}`, item])).values()
+    );
 
     this.#addMultiplesAccount(this.#accounts[0].cifno);
-    this.#addCurrentClientValue();
-  }
-
-  /**
-   * Função auxiliar para deduplicar os campos (fields) com base no fee code.
-   *
-   * @param {Array} fields - Array de fields a serem deduplicados.
-   * @returns {Array} - Array de fields sem duplicação.
-   */
-  #deduplicateFields(fields) {
-    const map = new Map();
-    for (const field of fields) {
-      if (!map.has(field.code)) {
-        map.set(field.code, field);
-      }
-    }
-    return Array.from(map.values());
-  }
-
-  /**
-   * Gera os feeGroups para a conta, clonando os grupos originais
-   * e atribuindo o número da conta (accountNumber) e o kycMailingStatus.
-   * Como para Customer Fees normalmente há apenas uma conta, não há replicação.
-   *
-   * @param {string} cif - O CIF do cliente.
-   */
-  #addMultiplesAccount(cif) {
-    const feeGroupTemplates = this.#customer.feeGroups;
-    const newFeeGroups = [];
-
-    for (const template of feeGroupTemplates) {
-      // Clona os fields para evitar referências compartilhadas
-      let clonedFields = template.fields.map((field) => ({
-        ...field,
-        exceptionOptions: field.exceptionOptions
-          ? field.exceptionOptions.map((opt) => ({ ...opt }))
-          : []
-      }));
-
-      // Deduplica os fields com base no fee code
-      clonedFields = this.#deduplicateFields(clonedFields);
-
-      // Define o kycMailingStatus: utiliza o valor da conta, se existir, ou "Standard" como padrão.
-      const kycMailingStatus =
-        this.#accounts[0].kycMailingStatus || 'Standard';
-
-      const newFeeGroup = new FeeGroup({
-        name: template.name,
-        fields: clonedFields,
-        cif,
-        accountNumber: this.#accounts[0].ddaNumber.toString(),
-        visible: template.visible,
-        code: template.code,
-        kycMailingStatus // Adicionado para garantir que não venha null
-      });
-      newFeeGroups.push(newFeeGroup);
-    }
-
-    this.#customer.feeGroups = newFeeGroups;
-  }
-
-  /**
-   * Atualiza os valores dos fees para cada grupo, definindo o labelValue com base no valor.
-   * Para Customer Fees, se o campo defaultValue já estiver definido (vindo do banco),
-   * ele não é sobrescrito.
-   */
-  #addCurrentClientValue() {
-    for (const feeGroup of this.#customer.feeGroups) {
-      for (const field of feeGroup.fields) {
-        field.labelValue = numberToCurrency(field.defaultValue);
-      }
-    }
+    this.#addCurrentClientValue(equityField);
   }
 
   get fee() {
-    return this.#customer;
+    if (!this.#investiment || !this.#investiment.feeGroups) {
+      return null;
+    }
+    return this.#investiment;
+  }
+
+  #addMultiplesAccount(cif) {
+   
+    const result = {};
+
+    for (const feeGroup of this.#investiment.feeGroups) {
+      for (const account of this.#accountsDDA) {
+        if (!result[account.number]) {
+          result[account.number] = {};
+        }
+
+        const fields = feeGroup.fields.filter((x) => x.code === account.code);
+        if (fields.length === 0) continue;
+
+        if (!result[account.number][feeGroup.name]) {
+          result[account.number][feeGroup.name] = [];
+
+          feeGroup.fields?.forEach((item) => {
+            if(!item.exceptionOptions){
+              item.exceptionOptions = []
+            }
+
+            item.exceptionOptions = item.exceptionOptions.filter((x) => !x.retired);
+            item.exceptionOptions.forEach(this.#allExceptions.add, this.#allExceptions);
+          });
+
+          const newFeeGroup = new FeeGroup({
+            name: feeGroup.name,
+            fields,
+            cif,
+            accountNumber: account.number,
+            visible: feeGroup.visible,
+            code: feeGroup.code,
+            entityCode: account.entity,
+          });
+          result[account.number][feeGroup.name].push(newFeeGroup);
+          continue;
+        }
+
+        const feeGroupToAddFields = result[account.number][feeGroup.name][0];
+        feeGroupToAddFields.fields = [...feeGroupToAddFields.fields, ...fields];
+      }
+    }
+
+    const feeGroupsByAccount = Object.keys(result).reduce((acc, accountNumber) => {
+      Object.keys(result[accountNumber]).forEach((groupName) => {
+        acc.push(result[accountNumber][groupName]);
+      });
+      return acc;
+    }, []);
+
+    this.#investiment.feeGroups = [];
+    for (const feeGroups of feeGroupsByAccount) {
+      for (const feeGroup of feeGroups) {
+        this.#investiment.feeGroups.push(feeGroup);
+      }
+    }
+  }
+
+  #addCurrentClientValue(equityField) {
+    const exceptionsOptions = Array.from(this.#allExceptions);
+    for (const [feeGroupIndex, feeGroup] of this.#investiment.feeGroups.entries()) {
+      feeGroup.cif = this.#accounts[0]?.cifno || null;
+      for (const [fieldIndex, field] of feeGroup.fields.entries()) {
+        if (field.isException) {
+          if (feeGroupIndex > 0 && this.#investiment.feeGroups[feeGroupIndex - 1].fields[fieldIndex]) {
+            field.labelValue =
+              this.#investiment.feeGroups[feeGroupIndex - 1].fields[fieldIndex].labelValue || '';
+          }
+        } else {
+          for (const account of this.#accounts) {
+            if (
+              field.code === feeGroup.accountNumber &&  
+              feeGroup.accountNumber === account.ddaNumber
+            ) {
+              if (field.code === 5) {
+                field.defaultValue = field.isStandard
+                  ? field.defaultValue
+                  : account.feeAmount?.toString() || '';
+                field.labelValue = numberToCurrency(field.defaultValue);
+              } else {
+                if (field.labelValue !== 'Other') {
+                  if (field.isCurrentClient) {
+                    field.defaultValue = account.feeCode?.toString() || '';
+                  }
+                  let exception = exceptionsOptions.find((x) => x.value === field.defaultValue);
+                  if (!exception && equityField?.exceptionOptions) {
+                    exception = equityField.exceptionOptions.find(
+                      (e) => e.value === field.defaultValue
+                    );
+                  }
+                  if (!exception) {
+                    exception = { text: '' };
+                  }
+                  field.labelValue = exception.text;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+    this.#clearMemory();
+  }
+
+  #clearMemory() {
+    this.#accounts = [];
+    this.#accountsDDA = [];
+    this.#allExceptions = new Set();
   }
 }
