--- a/.gitignore
+++ b/.gitignore
@@ -1,167 +1,133 @@
 import { FeeGroup } from './entities/FeeGroups.js';
 import numberToCurrency from '../core/helpers/currency.js';
 
-export default class InvestmentAccountFee {
-  // Ajustado para capturar os dados do banco que vêm com o feeType "Investment Fees"
-  #feeName = 'Investment Fees';
-  #investiment = {};
+export default class BankAccountFee {
+  #feeName = 'Bank Account Fees';
+  #bank = {};
   #accounts = [];
   #accountsDDA = [];
-  #allExceptions = new Set();
 
-  constructor(fees, accounts, equityField) {
-    this.#investiment = fees.filter((x) => x.feeType === this.#feeName)[0];
-    if (
-      !this.#investiment ||
-      !Array.isArray(this.#investiment.feeGroups) ||
-      !this.#investiment.feeGroups.length
-    ) {
-      this.#investiment = {};
-      return;
-    }
-    const feeGroupCode = this.#investiment.feeGroups[0].code;
-
-    // Filtra as contas de investimento (feeType === 3, conforme regra atual)
-    this.#accounts = accounts.filter((x) => x.feeType === 3);
-    if (this.#accounts.length < 1) {
-      this.#investiment = {};
-      return;
+  constructor(fees, accounts) {
+    if (!fees || !Array.isArray(fees) || fees.length === 0) {
+      throw new Error('Fees is empty or undefined');
     }
 
-    // Para cada conta, adiciona dois itens (para os códigos 5 e 7) em accountsDDA
-    this.#accounts.forEach((acc) => {
-      if (acc.ddaNumber) {
-        this.#accountsDDA.push({
-          number: acc.ddaNumber,
-          code: 5,
-          entity: acc.entity || null,
-        });
-        this.#accountsDDA.push({
-          number: acc.ddaNumber,
-          code: 7,
-          entity: acc.entity || null,
-        });
-      }
-    });
+    // Seleciona os dados do fee do tipo Bank Account Fees
+    this.#bank = fees.filter((x) => x.feeType === this.#feeName)[0];
+    if (!this.#bank || !Array.isArray(this.#bank.feeGroups)) {
+      throw new Error('Bank Account Fees or feeGroups are undefined');
+    }
 
-    // Deduplica os itens de accountsDDA com base na chave composta (number-code)
-    this.#accountsDDA = Array.from(
-      new Map(this.#accountsDDA.map((item) => [`${item.number}-${item.code}`, item])).values()
+    if (!accounts || !Array.isArray(accounts) || accounts.length === 0) {
+      throw new Error('Accounts is empty or undefined');
+    }
+
+    const feeGroupCode = this.#bank.feeGroups[0].code;
+    // Filtra as contas que pertencem ao grupo e deduplica com base no número de conta (ddaNumber)
+    const accountsFiltered = accounts.filter((x) => x.feeGroup === feeGroupCode);
+    this.#accounts = Array.from(
+      new Map(accountsFiltered.map((a) => [a.ddaNumber, a])).values()
     );
+    // Obtém os números de conta de forma única (já em string)
+    this.#accountsDDA = this.#accounts.map((a) => a.ddaNumber.toString());
 
+    if (this.#accounts.length === 0) {
+      throw new Error('No accounts matched with Bank Account Fees feeGroup');
+    }
+
+    // Cria os feeGroups para cada conta única
     this.#addMultiplesAccount(this.#accounts[0].cifno);
-    this.#addCurrentClientValue(equityField);
+    // Atualiza os valores de cada fee com os dados do cliente
+    this.#addCurrentClientValue();
   }
 
-  get fee() {
-    if (!this.#investiment || !this.#investiment.feeGroups) {
-      return null;
+  /**
+   * Função auxiliar para deduplicar os campos (fields) com base no fee code.
+   *
+   * @param {Array} fields - Array de fields a serem deduplicados.
+   * @returns {Array} - Array de fields sem duplicação.
+   */
+  #deduplicateFields(fields) {
+    const map = new Map();
+    for (const field of fields) {
+      if (!map.has(field.code)) {
+        map.set(field.code, field);
+      }
     }
-    return this.#investiment;
+    return Array.from(map.values());
   }
 
-  // Agrupa os feeGroups por conta, sem duplicar as informações para a mesma conta
+  /**
+   * Para cada conta única, gera um novo conjunto de feeGroups a partir dos templates
+   * existentes, atribuindo o número da conta (accountNumber) adequadamente.
+   *
+   * @param {string} cif - O CIF da conta.
+   */
   #addMultiplesAccount(cif) {
-    const result = {};
+    if (!this.#accounts || this.#accounts.length < 1) {
+      this.#bank = {};
+      return;
+    }
 
-    for (const feeGroup of this.#investiment.feeGroups) {
-      for (const account of this.#accountsDDA) {
-        if (!result[account.number]) {
-          result[account.number] = {};
-        }
+    const feeGroupTemplates = this.#bank.feeGroups;
+    const newFeeGroups = [];
 
-        // Filtra os fields do grupo que correspondem ao código esperado para a conta
-        const fields = feeGroup.fields.filter((x) => x.code === account.code);
-        if (fields.length === 0) continue;
+    for (const account of this.#accounts) {
+      const accountNumber = account.ddaNumber.toString();
+      for (const template of feeGroupTemplates) {
+        // Clona os fields para evitar referências compartilhadas
+        let clonedFields = template.fields.map((field) => ({
+          ...field,
+          exceptionOptions: field.exceptionOptions
+            ? field.exceptionOptions.map((opt) => ({ ...opt }))
+            : []
+        }));
 
-        if (!result[account.number][feeGroup.name]) {
-          result[account.number][feeGroup.name] = [];
+        // Deduplica os fields com base no fee code
+        clonedFields = this.#deduplicateFields(clonedFields);
 
-          // Processa os exceptionOptions dos fields
-          feeGroup.fields?.forEach((item) => {
-            if (!item.exceptionOptions) {
-              item.exceptionOptions = [];
-            }
-            item.exceptionOptions = item.exceptionOptions.filter((x) => !x.retired);
-            item.exceptionOptions.forEach(this.#allExceptions.add, this.#allExceptions);
-          });
-
-          const newFeeGroup = new FeeGroup({
-            name: feeGroup.name,
-            fields,
-            cif,
-            accountNumber: account.number,
-            visible: feeGroup.visible,
-            code: feeGroup.code,
-            entityCode: account.entity,
-          });
-          result[account.number][feeGroup.name].push(newFeeGroup);
-          continue;
-        }
-
-        const feeGroupToAddFields = result[account.number][feeGroup.name][0];
-        feeGroupToAddFields.fields = [...feeGroupToAddFields.fields, ...fields];
+        const newFeeGroup = new FeeGroup({
+          name: template.name,
+          fields: clonedFields,
+          cif,
+          accountNumber,
+          visible: template.visible,
+          code: template.code
+        });
+        newFeeGroups.push(newFeeGroup);
       }
     }
 
-    // Reorganiza os feeGroups em um array simples
-    const feeGroupsByAccount = Object.keys(result).reduce((acc, accountNumber) => {
-      Object.keys(result[accountNumber]).forEach((groupName) => {
-        acc.push(result[accountNumber][groupName]);
-      });
-      return acc;
-    }, []);
-
-    this.#investiment.feeGroups = [];
-    for (const feeGroups of feeGroupsByAccount) {
-      for (const feeGroup of feeGroups) {
-        this.#investiment.feeGroups.push(feeGroup);
-      }
-    }
+    this.#bank.feeGroups = newFeeGroups;
   }
 
-  // Atualiza os valores dos fees para cada grupo
-  #addCurrentClientValue(equityField) {
-    const exceptionsOptions = Array.from(this.#allExceptions);
-    for (const [feeGroupIndex, feeGroup] of this.#investiment.feeGroups.entries()) {
+  /**
+   * Atualiza os valores dos fees para cada grupo, definindo o labelValue com base no valor.
+   * Para os fees não-exception, converte o defaultValue para número e formata como moeda (com "$" e 2 casas decimais).
+   */
+  #addCurrentClientValue() {
+    for (const [feeGroupIndex, feeGroup] of this.#bank.feeGroups.entries()) {
       feeGroup.cif = this.#accounts[0]?.cifno || null;
       for (const [fieldIndex, field] of feeGroup.fields.entries()) {
         if (field.isException) {
-          if (
-            feeGroupIndex > 0 &&
-            this.#investiment.feeGroups[feeGroupIndex - 1].fields[fieldIndex]
-          ) {
+          const previousGroup = this.#bank.feeGroups[feeGroupIndex - 1];
+          if (previousGroup) {
             field.labelValue =
-              this.#investiment.feeGroups[feeGroupIndex - 1].fields[fieldIndex].labelValue || '';
+              previousGroup.fields[fieldIndex]?.labelValue || '';
           }
         } else {
           for (const account of this.#accounts) {
-            // Compara o field.code com account.ddaNumber (ambos convertidos para string, se necessário)
             if (
-              field.code === account.ddaNumber &&
-              feeGroup.accountNumber.toString() === account.ddaNumber.toString()
+              field.code === account.feeType &&
+              feeGroup.accountNumber === account.ddaNumber.toString()
             ) {
-              if (field.code === 5) {
-                // Para fields com código 5, que trazem o FeeAmount como string (ex: "$0.10 per share, min charge of $150 per trade"),
-                // usamos o valor que vem do banco sem converter.
-                field.labelValue = field.defaultValue;
-              } else {
-                if (field.labelValue !== 'Other') {
-                  if (field.isCurrentClient) {
-                    field.defaultValue = account.feeCode?.toString() || '';
-                  }
-                  let exception = exceptionsOptions.find((x) => x.value === field.defaultValue);
-                  if (!exception && equityField?.exceptionOptions) {
-                    exception = equityField.exceptionOptions.find(
-                      (e) => e.value === field.defaultValue
-                    );
-                  }
-                  if (!exception) {
-                    exception = { text: '' };
-                  }
-                  field.labelValue = exception.text;
-                }
+              if (field.isCurrentClient) {
+                field.defaultValue = account.feeAmount?.toString() || '';
               }
+              // Converte o defaultValue para número e formata como moeda com "$" e duas casas decimais
+              const numValue = parseFloat(field.defaultValue);
+              field.labelValue =
+                !isNaN(numValue) ? "$" + numValue.toFixed(2) : field.defaultValue;
             }
           }
         }
@@ -170,9 +136,12 @@ export default class InvestmentAccountFee {
     this.#clearMemory();
   }
 
+  get fee() {
+    return this.#bank;
+  }
+
   #clearMemory() {
     this.#accounts = [];
     this.#accountsDDA = [];
-    this.#allExceptions = new Set();
   }
 }
